--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
     name: eliar-finance-bot
-    runtime: python
+    env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python main.py"
-    pythonVersion: 3.13.4
+    envVars:
+      - key: BOT_TOKEN
+        sync: false
